--- a/Demo-Poet/appsettings.json
+++ b/Demo-Poet/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Demo_Poet-c3bdb4f4-b220-4476-911b-9b574f19873c;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Demo_Poet-c3bdb4f4-b220-4476-911b-9b574f19873c;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Demo_PoetContext": "Server=(localdb)\\mssqllocaldb;Database=Demo_Poet.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
